[package]
name = "dusk-hamt"
version = "0.10.0-rc.0"
authors = ["Kristoffer Ström <kristoffer@dusk.network>"]
edition = "2018"
description = "HAMT datatructure for microkelvin"
license = "MPL-2.0"
repository = "https://github.com/dusk-network/dusk-hamt"
keywords = ["merkle", "datastructure", "hamt"]

[dependencies]
microkelvin = "0.15.0-rc"
canonical = "0.7"
canonical_derive = "0.7"

[features]
persistence = ["microkelvin/persistence"]

