[package]
name = "dusk-hamt"
description = "HAMT datatructure for microkelvin"
categories = ["data-structures", "no-std"]
keywords = ["merkle", "datastructure", "hamt"]

repository = "https://github.com/dusk-network/dusk-hamt"
authors = [
    "Kristoffer Ström <kristoffer@dusk.network>",
    "Eduardo Leegwater Simões <eduardo@dusk.network>"
]
version = "0.9.1"

edition = "2021"
license = "MPL-2.0"

[dependencies]
microkelvin = { git = "ssh://git@github.com/dusk-network/microkelvin", branch = "tree-only" }
ranno = { git = "ssh://git@github.com/dusk-network/ranno", branch = "main" }
seahash = "4.1"
